@@ -148,6 +148,9 @@ API Changes
   CoveredBy. The area requirement on the predicates was removed, and Overlaps' definition
   was fixed. (David Smiley)
 
+* LUCENE-5850: CheckIndex now prints the Lucene version used to write
+  each segment.  (Robert Muir, Mike McCandless)
+
 Optimizations
 
 * LUCENE-5780: Make OrdinalMap more memory-efficient, especially in case the
